// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tabs /> > should allow id overriding 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_block__1oah0224"
    >
      <div
        aria-orientation="horizontal"
        class="reset_block__1oah0224 sprinkles_display_block_mobile__onxwju7q sprinkles_flexWrap_nowrap_mobile__onxwjul2 sprinkles_width_full_mobile__onxwjuda useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7s"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="tab-1-title-0"
          role="tab"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 1 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="tab-2-title-1"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 2 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="tab-3-title-2"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 3 title
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__1oah0224 sprinkles_paddingTop_6_mobile__onxwjur2 sprinkles_paddingBottom_6_mobile__onxwjunq sprinkles_width_full_mobile__onxwjuda TabPanes_root__15xyz920"
  >
    <div
      class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="tab-1-title-0"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-tab-1-title-0"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 sprinkles_display_none_mobile__onxwju7m sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="tab-2-title-1"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 sprinkles_display_none_mobile__onxwju7m sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="tab-3-title-2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<Tabs /> > should allow rendering indications 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_block__1oah0224"
    >
      <div
        aria-orientation="horizontal"
        class="reset_block__1oah0224 sprinkles_display_block_mobile__onxwju7q sprinkles_flexWrap_nowrap_mobile__onxwjul2 sprinkles_width_full_mobile__onxwjuda useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7s"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="od-11-0-tab"
          role="tab"
        >
          <div
            class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_row_mobile__onxwjuk6 sprinkles_flexWrap_nowrap_mobile__onxwjul2 sprinkles_gap_2_mobile__onxwjue2 sprinkles_justifyContent_center_mobile__onxwjuhy sprinkles_minWidth_fit-content_mobile__onxwjudu sprinkles_position_relative_mobile__onxwju9m"
            data-od-component="inline"
          >
            <div
              class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_2_mobile__onxwjue2 sprinkles_flexWrap_nowrap_mobile__onxwjul2"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 1 title
              </span>
            </div>
            <div
              class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_2_mobile__onxwjue2 sprinkles_flexWrap_nowrap_mobile__onxwjul2"
            >
              <span
                align="center"
                class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8 Tab_indication_active_true__11wt3mua Tab_indication_compound_0__11wt3mub"
              >
                5
              </span>
            </div>
          </div>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-11-1-tab"
          role="tab"
          tabindex="-1"
        >
          <div
            class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_row_mobile__onxwjuk6 sprinkles_flexWrap_nowrap_mobile__onxwjul2 sprinkles_gap_2_mobile__onxwjue2 sprinkles_justifyContent_center_mobile__onxwjuhy sprinkles_minWidth_fit-content_mobile__onxwjudu sprinkles_position_relative_mobile__onxwju9m"
            data-od-component="inline"
          >
            <div
              class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_2_mobile__onxwjue2 sprinkles_flexWrap_nowrap_mobile__onxwjul2"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 2 title
              </span>
            </div>
            <div
              class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_2_mobile__onxwjue2 sprinkles_flexWrap_nowrap_mobile__onxwjul2"
            >
              <span
                align="center"
                class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_dark__1xnpmd7f useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8"
              >
                5
              </span>
            </div>
          </div>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-11-2-tab"
          role="tab"
          tabindex="-1"
        >
          <div
            class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_row_mobile__onxwjuk6 sprinkles_flexWrap_nowrap_mobile__onxwjul2 sprinkles_gap_2_mobile__onxwjue2 sprinkles_justifyContent_center_mobile__onxwjuhy sprinkles_minWidth_fit-content_mobile__onxwjudu sprinkles_position_relative_mobile__onxwju9m"
            data-od-component="inline"
          >
            <div
              class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_2_mobile__onxwjue2 sprinkles_flexWrap_nowrap_mobile__onxwjul2"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 3 title
              </span>
            </div>
            <div
              class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_2_mobile__onxwjue2 sprinkles_flexWrap_nowrap_mobile__onxwjul2"
            >
              <span
                align="center"
                class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_dark__1xnpmd7f useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8"
              >
                5
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__1oah0224 sprinkles_paddingTop_6_mobile__onxwjur2 sprinkles_paddingBottom_6_mobile__onxwjunq sprinkles_width_full_mobile__onxwjuda TabPanes_root__15xyz920"
  >
    <div
      class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="od-11-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-null"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 sprinkles_display_none_mobile__onxwju7m sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="od-11-1-tab"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 sprinkles_display_none_mobile__onxwju7m sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="od-11-2-tab"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<Tabs /> > should match snapshot (high level) 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhe TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_block__1oah0224"
    >
      <div
        aria-orientation="horizontal"
        class="reset_block__1oah0224 sprinkles_display_block_mobile__onxwju7q sprinkles_flexWrap_nowrap_mobile__onxwjul2 sprinkles_width_full_mobile__onxwjuda useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7s"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="od-1-0-tab"
          role="tab"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 1 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-1-1-tab"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 2 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_backgroundColor_transparent__onxwju2n sprinkles_display_inline-flex_mobile__onxwju8e sprinkles_justifyContent_center_mobile__onxwjuhy useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-1-2-tab"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 3 title
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__1oah0224 sprinkles_paddingTop_6_mobile__onxwjur2 sprinkles_paddingBottom_6_mobile__onxwjunq sprinkles_width_full_mobile__onxwjuda TabPanes_root__15xyz920"
  >
    <div
      class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="od-1-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-null"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 sprinkles_display_none_mobile__onxwju7m sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="od-1-1-tab"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 sprinkles_display_none_mobile__onxwju7m sprinkles_width_full_mobile__onxwjuda TabPane_root__1e18dwc0"
      id="od-1-2-tab"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
